--- a/roke-art/public/style.css
+++ b/roke-art/public/style.css
@@ -1,30 +1,111 @@
 
+:root {
+  --dark-color: #293462;
+  --middle-color: #216583;
+  --light-color: #00818a;
+  --other-color: #f7be16;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
 .roke-container {
-  width: 1000px;
+  width: 1200px;
   margin: auto;
 }
 
+.title-container {
+  margin-bottom: 20px;
+}
 
-@media (min-width: 640px){
+.title-container h1 {
+  display: inline-block;
+  font-size: 60px;
+  color: var(--light-color);
+  font-weight: 100;
+}
+
+/*
+Nav Bar
+*/
+
+.navigation {
+  display: inline-block;
+  width: 140px;
+}
+
+.navigation ul li {
+  list-style-type: none;
+  margin-top: 10px;
+}
+
+.navigation ul {
+  border-left: 3px solid var(--light-color);
+  padding-left: 10px;
+}
+
+.navigation a {
+  color: var(--light-color);
+  font-weight: 100;
+}
+
+.navigation a:hover {
+  text-decoration: none;
+  color: var(--dark-color);
+}
+
+.navigation a.activeState {
+  color: var(--dark-color);
+}
+
+/*
+  Shared
+*/
+
+.page-title {
+  color: var(--other-color);
+  size: 40px;
+  text-align: center;
+}
+
+/*
+  Gallery
+*/
+
+.image-column {
+  width: 33%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.image-column img {
+  width: 100%;
+  padding: 5px 2.5px;
+}
 
 
+@media (max-width: 768px){
+  .roke-container {
+    width: 100%;
+    margin: auto;
+  }
+
+  .image-column {
+    width: 100%;
+    display: block;
+  }
+
+  .image-column img {
+    width: 100%;
+    padding: 5px;
+  }
 
 }
 
-@media (min-width: 768px){
-
-
-
-}
-
-@media (min-width: 1024px){
-
-
-
-}
-
-@media (min-width: 1200px){
-
-
-
+@media (max-width: 1200px) and (min-width: 768px){
+  .roke-container {
+    width: 1000px;
+    margin: auto;
+  }
 }
