starting to add carousel

--- a/roke-art/public/views/home.tpl.html
+++ b/roke-art/public/views/home.tpl.html
@@ -1,3 +1,10 @@
 <div class="about">
   <h1 class="page-title">Home</h1>
+  <div style="height: 305px">
+    <div uib-carousel active="model.active" interval="model.carouselInterval" no-wrap="noWrapSlides">
+      <div uib-slide ng-repeat="paintings in model.carouselPaintings track by paintings.img" index="slide.id">
+        <img ng-src="{{paintings.image}}" style="margin:auto;">
+      </div>
+    </div>
+  </div>
 </div>
