--- a/roke-art/public/style.css
+++ b/roke-art/public/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-.roke-container {
+.content-container {
   width: 1200px;
   margin: auto;
 }
@@ -30,33 +30,81 @@ body {
 Nav Bar
 */
 
-.navigation {
-  display: inline-block;
-  width: 140px;
+.header-home {
+  background-image: url('/assets/img/header_national_bank.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  position: relative;
+}
+
+.background-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.70);
+}
+
+.header-title-container {
+  width: 100%;
+  color: white;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.header-title {
+  font-size: 80px;
+  line-height: 80px;
+}
+
+.header-title span {
+  border-bottom: 20px solid rgb(247,199,98);
 }
 
 .navigation ul li {
   list-style-type: none;
-  margin-top: 10px;
-}
-
-.navigation ul {
-  border-left: 3px solid var(--light-color);
-  padding-left: 10px;
-}
-
-.navigation a {
-  color: var(--light-color);
-  font-weight: 100;
 }
 
 .navigation a:hover {
   text-decoration: none;
-  color: var(--dark-color);
+  color: rgb(247,199,98);
 }
 
 .navigation a.activeState {
-  color: var(--dark-color);
+  color: rgb(247,199,98);
+}
+
+.header-other {
+  background-image: url('/assets/img/header_national_bank.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50px;
+  position: relative;
+}
+
+.header-other ul {
+  position: absolute;
+  margin-top: -40px;
+}
+
+.header-other li {
+  display: inline;
+  color: white;
+  margin-right: 20px;
+}
+
+.header-other a {
+  color: white;
+}
+
+.header-other .background-overlay {
+  position: relative;
 }
 
 /*
@@ -67,6 +115,117 @@ Nav Bar
   color: var(--other-color);
   size: 40px;
   text-align: center;
+  margin: 80px auto;
+}
+
+/*
+  Home
+*/
+
+.thumbnail-container {
+  width: 1000px;
+  margin: auto;
+  margin-top: 80px;
+  text-align: center;
+}
+
+.thumbnail {
+  width: 30%;
+  display: inline-block;
+  position: relative;
+  padding: 20px;
+}
+
+.thumbnail-one-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(247,199,98, 0.70);
+}
+
+.thumbnail-three-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.70);
+}
+
+.thumbnail-one {
+  height: 200px;
+  background: url('/assets/img/flower_2.JPG');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.thumbnail-two {
+  height: 200px;
+  background: url('/assets/img/flower_1.JPG');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.thumbnail-three {
+  height: 200px;
+  background: url('/assets/img/flower_3.JPG');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.thumbnail-title {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 50px;
+  font-weight: 300;
+}
+
+.thumbnail-title.one {
+  color: black;
+}
+
+.thumbnail-title.two {
+  background-color: rgba(247,199,98, 0.7);
+  font-weight: 400;
+  color: black;
+}
+
+.thumbnail-title.three {
+  color: white;
+}
+
+/*
+  About
+*/
+
+.about-container {
+  width: 800px;
+  margin: auto;
+}
+
+.about-container .image-left {
+  width: 300px;
+  margin: auto;
+  margin-right: 20px;
+  float: left;
+}
+
+.about-container .image-right {
+  width: 300px;
+  margin: auto;
+  margin-left: 20px;
+  margin-top: 20px;
+  float: right;
 }
 
 /*
@@ -84,9 +243,56 @@ Nav Bar
   padding: 5px 2.5px;
 }
 
+.painting:hover {
+  opacity: 0.3;
+  transition: .5s ease;
+  cursor: pointer;
+}
 
-@media (max-width: 768px){
-  .roke-container {
+/*
+  Popup
+*/
+
+.modal-content {
+  background: none;
+  border: none;
+}
+
+.modal-backdrop.show {
+  opacity: .8;
+}
+
+.painting-modal-image {
+  width: 100%;
+}
+
+.painting-modal {
+  color: white;
+}
+
+.painting-modal-title {
+  font-size: 30px;
+}
+
+.painting-modal-exit {
+  float: right;
+  cursor: pointer;
+}
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(247,199,98);
+  margin-top: 100px;
+}
+
+
+@media (max-width: 768px) {
+  .hidden-sm-down {
+    display: none;
+  }
+
+  .content-container {
     width: 100%;
     margin: auto;
   }
@@ -101,10 +307,33 @@ Nav Bar
     padding: 5px;
   }
 
+  .painting-modal-title {
+    display: block;
+  }
+
+  .about-container {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .thumbnail-container {
+    width: 100%;
+  }
+
+  .thumbnail {
+    width: 80%;
+    display: block
+    margin:auto;
+  }
+
+  .header-title span {
+    border-bottom: none;
+  }
+
 }
 
 @media (max-width: 1200px) and (min-width: 768px){
-  .roke-container {
+  .content-container {
     width: 1000px;
     margin: auto;
   }
