--- a/roke-art/public/views/about.tpl.html
+++ b/roke-art/public/views/about.tpl.html
@@ -15,9 +15,8 @@
       Currently, I reside in Albuquerque with Dorothy, my wife, and you will see some of the work I’ve completed incorporating
       the Southwestern theme. We’ve raised three wonderful children and now they have beautiful children of their own. We are
       blessed! Mexico is a great place to paint and to learn about styles and genres as many notable painters and artists
-      (Hurley, Gorman, O’Keeffe, Hartley, etc.) have embraced the States beauty, it’s mercurial skies, colorful mesas, and
-      interesting people and applied their artistic skills to the canvases and other medium. I have only started painting
-      within the past twelve years but started drawing with a pencil since the fourth grade.
+      have embraced the state's beauty, it’s mercurial skies, colorful mesas, and
+      interesting people and applied their artistic skills to the canvases and other medium.
     </div>
     <br />
     <img class="image-right hidden-sm-down" src="/assets/img/gallery/blue_house.JPG" alt="">
