--- a/roke-art/public/views/contact.tpl.html
+++ b/roke-art/public/views/contact.tpl.html
@@ -1,3 +1,11 @@
-<div class="about">
+<div class="contact">
   <h1 class="page-title">Contact</h1>
+  <img src="/assets/img/church_perspective.JPG" alt="">
+  <div class="email-container">
+    <div class="email-inner">
+      For all inquiries, please email me at
+      <br/>
+      <a href="mailto:roke.muna.art@gmail.com">roke.muna.art@gmail.com</a>
+    </div>
+  </div>
 </div>
