--- a/roke-art/public/views/home.tpl.html
+++ b/roke-art/public/views/home.tpl.html
@@ -3,7 +3,7 @@
 
     <div class="thumbnail" >
       <a ui-sref="about" ui-sref-active="activeState">
-        <div class="thumbnail-one">
+        <div class="thumbnail-one thumbnail-inner">
           <div class="thumbnail-one-overlay"></div>
           <div class="thumbnail-title one">
             About
@@ -14,7 +14,8 @@
 
     <div class="thumbnail">
       <a ui-sref="gallery" ui-sref-active="activeState">
-        <div class="thumbnail-two">
+        <div class="thumbnail-two thumbnail-inner">
+          <div class="thumbnail-two-overlay"></div>
           <div class="thumbnail-title two">
             Gallery
           </div>
@@ -24,7 +25,7 @@
 
     <div class="thumbnail">
       <a ui-sref="contact" ui-sref-active="activeState">
-        <div class="thumbnail-three">
+        <div class="thumbnail-three thumbnail-inner">
           <div class="thumbnail-three-overlay"></div>
           <div class="thumbnail-title three">
             Contact
