--- a/roke-art/public/views/contact.tpl.html
+++ b/roke-art/public/views/contact.tpl.html
@@ -1,11 +1,13 @@
 <div class="contact">
   <h1 class="page-title">Contact</h1>
-  <img src="/assets/img/church_perspective.JPG" alt="">
-  <div class="email-container">
-    <div class="email-inner">
-      For all inquiries, please email me at
-      <br/>
-      <a href="mailto:roke.muna.art@gmail.com">roke.muna.art@gmail.com</a>
-    </div>
+  <div class="contact-instructions">
+    For all inquiries, please feel free to reach out!
+  </div>
+  <div class="contact-info-container">
+    <strong><a href="mailto:roke.muna.art@gmail.com">roke.muna.art@gmail.com</a> </strong>
+    <br>
+    <br>
+    <br>
+    <strong> <a href="tel:5052682017">505-268-2017</a> </strong>
   </div>
 </div>
