--- a/roke-art/public/views/home.tpl.html
+++ b/roke-art/public/views/home.tpl.html
@@ -1,6 +1,5 @@
 <div class="home">
   <div class="thumbnail-container">
-
     <div class="thumbnail" >
       <a ui-sref="about" ui-sref-active="activeState">
         <div class="thumbnail-one thumbnail-inner">
@@ -33,6 +32,16 @@
         </div>
       </a>
     </div>
+  </div>
 
+  <div class="bio-container">
+    <p>
+      From the skies of New Mexico to the palm trees of Guam, Roke finds inspiration as much from his surroundings as his upbringing.
+      Roke’s body of work combines his love of the people, places and culture of Guam as well as the home he and his wife have created in Albuquerque.
+      Everything from bold, flashy colors to soft, delicate landscapes define his unique style that charmingly blends his two distinct cultures.
+      <br>
+      <br>
+      He truly believes that everyone is an artist and is looking forward to sharing his talent with others.
+    </p>
   </div>
 </div>
