--- a/roke-art/public/style.css
+++ b/roke-art/public/style.css
@@ -13,7 +13,7 @@ body {
 .content-container {
   width: 1200px;
   margin: auto;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .title-container {
@@ -216,6 +216,16 @@ Nav Bar
   color: rgba(247,199,98);
 }
 
+.bio-container {
+  margin: 100px auto;
+  padding: 50px;
+  border: 3px solid #00cde2;
+  border-radius: 10px;
+  max-width: 820px;
+  font-style: italic;
+  text-align: center;
+}
+
 /*
   About
 */
@@ -295,34 +305,28 @@ Nav Bar
   Contact Us
 */
 
-.contact img {
-  height: 500px;
-  margin-left: 100px;
-  border: 4px solid #00cde2;
-  padding: 10px;
+.contact {
+  text-align: center;
 }
 
-.email-container {
-  display: inline;
-  margin-left: -170px;
-  padding: 60px 100px;
-  background-color: rgb(247,199,98);
-}
-
-.contact a {
-  color: black;
-}
-
-.email-inner {
-  display: inline-block;
-  vertical-align: middle;
-  font-weight: 300;
+.contact-instructions {
   font-size: 20px;
+  margin-bottom: 80px;
 }
 
-.email-inner a {
-  font-size: 30px;
-  font-weight: 400;
+.contact-info-container {
+  padding: 100px 40px;
+  max-width: 600px;
+  margin: auto;
+  font-size: 35px;
+  margin-top: 50px;
+  color: #00cde2;
+  border: 4px solid rgb(247,199,98);
+  border-radius: 5px;
+}
+
+.contact-info-container a {
+  color: #00cde2;
 }
 
 /*
@@ -365,6 +369,11 @@ Nav Bar
     display: none;
   }
 
+  .bio-container {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
   .content-container {
     width: 100%;
     margin: auto;
@@ -401,6 +410,29 @@ Nav Bar
 
   .header-title span {
     border-bottom: none;
+  }
+
+  .contact-instructions {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .contact-info-container {
+    font-size: 25px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+
+  .footer-home {
+    display: none;
+  }
+
+  .footer ul {
+    float: none;
+    padding: 0px;
+    text-align: center;
   }
 
 }
