--- a/roke-art/public/views/about.tpl.html
+++ b/roke-art/public/views/about.tpl.html
@@ -1,35 +1,31 @@
 <div class="about">
-  <h1 class="page-title">About</h1>
+  <h1 class="page-title">A Note from Roke</h1>
   <div class="about-container">
     <div>
-      My name is Roke Muna and here’s hoping you enjoy the “browse” through some of my oil and acrylic paintings that I’ve
-      completed during the past few years. I was born and raised in a small but beautiful western pacific island called
-      Guam-in a tiny village of about 7500 people. My village is called Agat and I can honestly say that a lot of my work was
-      influenced by living on the island. A lot of the themes I selected for my artwork were from old pictures of southern
-      Guam. Many of these were photos taken while my family and I visited families and friends and the beautiful local sites
+      My name is Roke Muna and I hope you enjoy browsing some of the oil and acrylic paintings that I’ve
+      completed during the past few years. I was born and raised in a small but beautiful western Pacific island called
+      Guam in a tiny village of about 7500 people. A lot of the themes I selected for my artwork were from old pictures of southern
+      Guam. Additionally, many of these were photos taken while my family and I visited families, friends and the beautiful local sites
       all over Guam over these past thirty years.
     </div>
     <br />
     <img class="image-left hidden-sm-down" src="/assets/img/gallery/field_of_flowers.JPG" alt="">
     <div>
-      Currently, I reside in Albuquerque with Dorothy, my wife, and you will see some of the work I’ve completed incorporating
-      the Southwestern theme. We’ve raised three wonderful children and now they have beautiful children of their own. We are
-      blessed! Mexico is a great place to paint and to learn about styles and genres as many notable painters and artists
-      have embraced the state's beauty, it’s mercurial skies, colorful mesas, and
-      interesting people and applied their artistic skills to the canvases and other medium.
+      Currently, I reside in Albuquerque with my wife Dorothy. We’ve raised three wonderful children and now they have beautiful children of their own.
+      New Mexico is a great place to paint and to learn about styles and genres as many notable painters and artists
+      have embraced the state's beauty. Its mercurial skies, colorful mesas, and
+      interesting people translate well to the canvas and other mediums. I too have been inspired by this beauty and have incpororated the Southwestern theme into much of my work.
     </div>
     <br />
     <img class="image-right hidden-sm-down" src="/assets/img/gallery/blue_house.JPG" alt="">
     <div>
-      I am still learning the trade, and will do so for years to come. I believe everyone is an artist to some degree, but
-      some pursue it more than others. Dorothy has been my biggest art fan and advocate, especially when it comes to art
+      I believe everyone is an artist and has something to contribute to this world. Dorothy has been my biggest art fan and advocate, especially when it comes to art
       themes, concepts, and words of encouragement. I could not have gone this far without her love and support!
     </div>
     <br />
     <div>
       My work is on permanent display at some of the local restaurants and clinics in Albuquerque. I’ve also done
-      work for many families and friends. I hope to have my paintings on display someday in Guam (banks, Government offices,
-      restaurants, etc.) and also in more places in New Mexico.
+      work for many families and friends as I love to share my work, especially with the people I care about the most.
     </div>
     <br />
     <div>
